# revelio

./: .gitignore  Cargo.toml  README.md
src/: core.rs  helpers.rs  lib.rs  main.rs  msgraph_api.rs
src/core/: auth.rs  constants.rs
src/msgraph_api/: me.rs  users.rs  v1.rs
src/msgraph_api/v1/: client.rs  me.rs  resources.rs  users.rs
