[package]
name = "revelio"
version = "0.1.0"
edition = "2021"
authors = ["y0k4i"]
description = "Reveals data from Microsoft Tenants using the Microsoft Graph API"
license = "MIT"
repository = "https://github.com/y0k4i-1337/revelio"
readme = "README.md"
keywords = ["microsoft", "graph", "api", "oauth2", "cli"]
categories = ["cli", "microsoft", "graph", "api", "oauth2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive", "wrap_help", "env"] }
colored = "2.0.4"
oauth2 = "4.4.1"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
